# inference

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DISK_SPACE.md  FEATURES.md  IMPLEMENTATION.md  MODELS.md  README.md  SPEC.md  SUMMARY.md  TODO.md  USAGE.md  demo.sh  test.sh
docs/: API.md
examples/: basic_usage.rs
src/: cli.rs  config.rs  download.rs  error.rs  influencer.rs  local.rs  main.rs  model_ops.rs  models.rs  output.rs  search.rs
src/influencer/: mod.rs  server.rs  service.rs  watsonx.rs
src/local/: architecture.rs  backends.rs  config.rs  device.rs  gguf_backend.rs  mod.rs  sampling.rs
src/output/: code_highlight.rs  markdown_stream.rs
tests/: README.md  integration_test.rs
