[package]
name = "influence"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"
indicatif = "0.17"
directories = "5.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"

[[bin]]
name = "influence"
path = "src/main.rs"
